# A-Modular-Kingdom

./: .dockerignore  .env.example  .gitignore  .mailmap  AGENTS.md  A_Modular_Kingdom_Report.html  CLAUDE.md  CONTEXT.md  FEATURES.json  GLOBAL_RULES.md  GLOBAL_RULES.xml  GUIDE.md  NOTICE  Problem-solver.xml  RAG_DEBUG_HANDOFF.md  RAG_FIXES_COMPLETE.md  RAG_FIXES_SUMMARY.md  README.md  REQUIREMENTS.md  SESSION_HANDOFF.md  TASKS.md  VISION.md  benchmark_results.txt  build_deb.sh  codex-test-file.txt  finish_download.py  flaws.md  init.sh  mkdocs.yml  progress.md  pyproject.toml  rag_debug_test.py  readme.md  social-media-posts.md  test_arg0.patch  test_arg0_2.patch  test_arg0_3.patch  test_arg0_4.patch  test_arg0_5.patch  test_arg0_6.patch  (+1 more)
.ES/rag_reconstruction_2026-07-08/: ES.md  reminders.md  run_experiment.py
.gemini/: settings.json
.github/: ui-wiring.b64
.github/builds/: latest-main.json
.github/finalizer/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  chunk-06  chunk-07  chunk-08  chunk-09  chunk-10  chunk-11  chunk-12  chunk-13  chunk-14  chunk-15  chunk-16  chunk-17
.github/patches/: elpis-product-1.patch  elpis-product-2.patch  elpis-ui-final.patch
.github/provider-routing-patch/: fix.patch  part00.b64  part01.b64  part02.b64  part03.b64
.github/workflows/: agent-ui-diagnostics.yml  agent-ui-exact-verification.yml  agent-ui-rustfmt.yml  apply-elpis-provider-slice.yml  context-memory-apply.yml  context-memory-pr.yml  deploy-docs.yml  (+14 more)
A-Modular-Kingdom/: GITHUB_UPDATES.md  RAG_TESTING_GUIDE.md  README.md  TOOLS_STATUS.md  pyproject.toml  test_tools.py
agent/: README.md  host.py  main.py
benchmark/: test_core_performance.py
codex-rs/: .ui-ci-pulse  Cargo.toml  ELPIS_UPSTREAM.md
codex-rs/claude-bridge/: Cargo.toml
codex-rs/claude-bridge/src/: lib.rs
docker/: Dockerfile  Dockerfile.test  README.md  docker-compose.yml
docs/: .provider-slice-pr-trigger  AGENT_DISPATCH.md  AUTHENTICATION_BOUNDARY.md  BUILD_AND_REDUCTION_AUDIT.md  CODEBASE_REDUCTION_AGENT_PROMPT.md  CODEX_FOUNDATION_MIGRATION.md  CONTEXT_AND_SESSIONS.md  EMBEDDED_ELPIS_EVIDENCE.md  FEATURE_PROPOSALS.md  FOUNDATION_CODEX_BASELINE_EVIDENCE.md  GEMINI_RUNTIME_CONTRACT.md  LAUNCH_SMOKE_EVIDENCE.md  PRODUCT_COMPLETION.md  PRODUCT_COMPLETION_CHECKLIST.md  PROVIDERS.md  PROVIDER_SLICE_REVIEW.md  QDRANT_CLOUD_SETUP.md  RAG_PERFORMANCE.md  RAG_TUNING.md  README_V3.md  RUNTIME_BOUNDARY_WIP_EVIDENCE.md  TASKS_V0_1_ARCHIVE.md  UI_IDENTITY.md  UPSTREAM_CAPABILITY_MAP.md  auto_note.md  context-and-sessions.md  index.md  memory.md  presentation_en.html  providers.md  visual-walkthrough.md
elpis/: BLOG_POST.md  README.md  temp.md
gemini-cli/: rag.toml
memory/: MEMORY_SYSTEM_DOCUMENTATION.md  README.md  core.py
notebooks/: README.md
rag/: core_2.py  fetch_2.py  fetch_3.py
scripts/: apply-elpis-identity-provider-slice.py  codex-auth-status-smoke.sh  install-elpis-binary.sh  install-elpis.sh  register_mcp.py  setup-rag.sh  setup_mcp.sh
src/: .env.cuda  .gitignore  README.md  TOOLS_STATUS.md  fix_cuda.sh
tests/: README.md  benchmark_challenging.py  benchmark_faq.py  benchmark_faq_fixed.py  benchmark_fixed_results.txt  benchmark_manual_check.py  benchmark_rag.py  benchmark_real.py  benchmark_real_fixed.py  benchmark_real_results.txt  notebooklm-prompt.md  test_fetch.py  test_memory_global.py  test_notebook_chunker.py  test_proxy.py  test_rag.py  test_rag_core.py  test_rag_eval.py  test_rag_fetch.py  test_rag_mcp_host.py  test_rag_real.py  test_rag_scope.py  test_rag_v2.py  test_rag_v3.py  test_scoped_memory.py  test_tools.py
tui/: Cargo.toml  system_prompt.md
(+381 files in other folders)
