[project]
name = "a-modular-kingdom"
version = "0.1.0"
description = "A modular agentic kingdom with memory, RAG, and web search"
dependencies = [
    "mcp",
    "fastmcp", 
    "ollama",
    "mem0ai",
    "chromadb",
    "nest-asyncio",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "faiss-cpu>=1.11.0.post1",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "rank-bm25",
    "prompt-toolkit",
    "langchain-huggingface",
    "instructor>=1.0.0",
    # TTS/STT dependencies
    "pyttsx3>=2.90",
    "gtts>=2.2.0",
    "openai-whisper>=20231117",
    "speechrecognition>=3.10.0",
    "pygame>=2.0.0",
    # Browser automation
    "browser-use>=0.1.0",
    "playwright>=1.40.0",
    # PyTorch CPU-only (CUDA 13 driver incompatible with PyTorch pre-built wheels)
    # Ollama handles GPU for embeddings, PyTorch only used for CPU reranker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "memory", "rag", "tools"]
