[project]
name = "elpis-rag"
version = "0.1.0"
description = "Elpis local RAG MCP service"
dependencies = [
    "ollama",
    "pymupdf>=1.26.3",
    "torch==2.5.1",
    "sentence-transformers>=5.0.0",
    "langchain-community>=0.3.27",
    "qdrant-client>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agent",
    "src/rag",
    "src/utils",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
]
